refactored sync and auth
